Revision history for Perl extension URI::db.

0.15

0.14  2014-09-03T00:28:37Z
      - The `dbi_dsn` method of URI::vertica now returns an ODBC DSN instead
        of DBD::Pg, since the latter apparently does not work with Verica.
      - Added a note to the `dbi_dsn` documentation that query params are
        included in the returned value.

0.13  2014-08-09T22:48:53Z
      - Added URI::postgresxc and URI::pgxc, which simply inherit from
        URI::pg.
      - Added URI::ldapdb, which represents LDAP databases. Patch from Brian
        T. Wightman.

0.12  2014-01-10T17:23:35Z
      - Eliminated "v-string in use/require non-portable" warning on older
        Perls.

0.11  2014-01-03T20:01:01Z
      - Fixed URI::oracle to properly generate a DBI DSN with no host name or
        port.
      - The `dbi_dsn()` method in URI::sqlserver (and its subclasses) now
        generates a DSN using DBD::Sybase, rather than DBD::ODBC.

0.10  2013-12-20T00:16:30Z
      - Initial version.