@@ -8,6 +8,17 @@ our $VERSION = '0.15';
 sub uri    { shift }
 sub _no_scheme_ok { 0 }
 
+sub canonical_engine { shift->scheme }
+
+sub canonical {
+    my $canon = shift->SUPER::canonical;
+    my $engine = $canon->canonical_engine;
+    return $canon if $canon->scheme eq $engine;
+    $canon = $canon->clone;
+    $canon->scheme($engine);
+    return $canon;
+}
+
 sub engine {
     my $self = shift;
     return $self->scheme unless @_;
