@@ -3,5 +3,6 @@ use base 'URI::_db';
 our $VERSION = '0.15';
 
 sub default_port { 5984 }
+sub canonical_engine { 'couchdb' }
 
 1;
