@@ -4,6 +4,7 @@ our $VERSION = '0.15';
 
 sub default_port { 50000 }
 sub dbi_driver   { 'monetdb' }
+sub canonical_engine { 'monetdb' }
 
 sub _dbi_param_map {
     my $self = shift;
