@@ -4,5 +4,6 @@ our $VERSION = '0.15';
 
 sub default_port { 5432 }
 sub dbi_driver   { 'Pg' }
+sub canonical_engine { 'pg' }
 
 1;
