@@ -3,9 +3,9 @@ use base 'URI::_db';
 our $VERSION = '0.15';
 
 sub dbi_driver { 'SQLite' }
+sub canonical_engine { 'sqlite' }
 sub _dbi_param_map {
     return [ dbname => scalar shift->dbname ];
 }
-
 
 1;
