@@ -1,6 +1,10 @@
 Revision history for Perl extension URI::db.
 
 0.15
+      - Added the `canonical_engine` accessor, which returns the canonical
+        engine name.
+      - Added `the canonical` method, which will replace the engine name with
+        its canonical value if it's not already canonical.
 
 0.14  2014-09-03T00:28:37Z
       - The `dbi_dsn` method of URI::vertica now returns an ODBC DSN instead
